--- a/produk.html
+++ b/produk.html
@@ -28,7 +28,7 @@
     <div class="container-body">
       <nav class="navbar navbar-expand-lg" x-data>
         <div class="container-fluid">
-          <a class="navbar-brand" href="Home.html"
+          <a class="navbar-brand" href="index.html"
             ><img class="logo" src="static/logoPangcuy.png"
           /></a>
           <a href="#" id="shopping-cart-btn">
